--- a/client/library.jade
+++ b/client/library.jade
@@ -1,66 +1,71 @@
 template(name='library')
-    .centered.row
-        h1.ui.header Library
-    .row
-        .four.wide.column
-            +tag_facet
-            .ui.hidden.divider
-            #add_doc.ui.compact.basic.fluid.button
-                i.green.plus.icon
-                |Add Doc
-        .twelve.wide.column
-            .ui.cards
-                each docs
-                    +doc_card
+    .ui.stackable.padded.grid
+        .centered.row
+            h1.ui.header Library
+        .row
+            .four.wide.column
+                +tag_facet
+                .ui.hidden.divider
+                #add_doc.ui.compact.basic.fluid.button
+                    i.green.plus.icon
+                    |Add Doc
+            .twelve.wide.column
+                .ui.cards
+                    each docs
+                        +doc_card
 
 
 template(name='doc_card')
-    a.ui.card(href="/doc/#{_id}")
+    .ui.fluid.card
         .image
-            img(src="{{c.url image_id  height=300 crop='fill' gravity='face' }}")
-            if image_url
-                img.ui.centered.image(src=image_url)
+            a(href="/doc/#{_id}")
+                img(src="{{c.url image_id  height=300 crop='fill' gravity='face' }}")
+                if image_url
+                    img.ui.centered.image(src=image_url)
             if youtube
                 +youtube
         .content
+            |!{clipped_content}
             each tags
                 .ui.compact.button.doc_tag(class=tag_class) #{this}
-                
+            a.ui.right.floated.basic.icon.button(href="/doc/#{_id}")
+                i.right.arrow.icon
                 
                 
 template(name='doc')
-    with doc
-        unless editing
-            .row
-                .three.wide.column
-                    a.ui.top.left.attached.basic.button(href="/library")
-                        i.arrow.left.icon
-                        |Library
-                .twelve.wide.center.aligned.column
-                    h1.ui.header View Document
-            .row
-                .ten.wide.column
-                    img.ui.centered.image(src="{{c.url image_id height=500 width=800 background='white' crop='lpad'}}")
-                    if image_url
-                        img.ui.centered.image(src=image_url)
-                    each tags
-                        .ui.basic.label #{this}
-                    +youtube
-                    +content
-                .five.wide.column
-                    +edit_button
-        else
-            .centered.row
-                h1.ui.center.aligned.header Edit Document
-            .row
-                .twelve.wide.column
-                    .ui.form
-                        +tags
-                        +image_id
-                        +image_url
+    .ui.stackable.padded.grid
+        with doc
+            unless editing
+                .row
+                    .three.wide.column
+                        a.ui.top.left.attached.basic.button(href="/library")
+                            i.arrow.left.icon
+                            |Library
+                    .twelve.wide.center.aligned.column
+                        h1.ui.header View Document
+                .row
+                    .ten.wide.column
+                        img.ui.centered.image(src="{{c.url image_id height=500 width=800 background='white' crop='lpad'}}")
+                        if image_url
+                            img.ui.centered.image(src=image_url)
+                        each tags
+                            .ui.basic.label #{this}
                         +youtube
                         +content
-                .four.wide.column
-                    +edit_button
-                    #delete_doc.ui.red.icon.button
-                        i.trash.icon
+                    .five.wide.column
+                        +edit_button
+            else
+                .centered.row
+                    h1.ui.center.aligned.header Edit Document
+                .row
+                    .twelve.wide.column
+                        .ui.form
+                            +tags
+                            +image_id
+                            +image_url
+                            +youtube
+                            +content
+                    .four.wide.column
+                        +edit_button
+                        #delete_doc.ui.red.icon.button
+                            i.trash.icon
