--- a/client/templates.jade
+++ b/client/templates.jade
@@ -36,8 +36,8 @@ template(name="tag_result")
 
 
 template(name='nav')
-    .ui.large.attached.borderless.menu
-        a.ui.header.item(href='/') Bike Loaner
+    .ui.large.borderless.menu
+        a.ui.header.item(href='/') C&O BL
         a.item(href='/volunteer') Volunteer
         a.item(href='/posts') Posts
         a.item(href='/bikes') Bikes
