--- a/client/events.jade
+++ b/client/events.jade
@@ -1,14 +1,19 @@
 template(name='events')
     .ui.stackable.padded.grid
         .centered.row
-            h1.ui.header Events
+            .three.wide.column
+                #add_event.ui.button
+                    i.green.plus.icon
+                    |Add Event
+            .ten.wide.column
+                h1.ui.center.aligned.header 
+                    i.calendar.icon
+                    |Events
+            .three.wide.column
         .row
             .four.wide.column
                 +tag_facet
                 .ui.hidden.divider
-                #add_event.ui.compact.basic.fluid.button
-                    i.green.plus.icon
-                    |Add Event
             .twelve.wide.column
                 .ui.cards
                     each events
@@ -17,12 +22,12 @@ template(name='events')
 
 template(name='event_card')
     .ui.card
-        a.image(href="/event/#{_id}")
+        a.image(href="/view/#{_id}")
             img(src="{{c.url image_id  height=300 crop='fill' gravity='face' }}")
             if image_url
                 img.ui.centered.image(src=image_url)
         .content
-            a.header(href="/event/#{_id}") #{title}
+            a.header(href="/view/#{_id}") #{title}
         .content
             strong #{formatted_start_date}
             strong #{formatted_start_date}
@@ -34,45 +39,48 @@ template(name='event_card')
                 
                 
                 
-template(name='event')
+template(name='event_view')
     .ui.stackable.padded.grid
-        with event
-            unless editing
-                .row
-                    .three.wide.column
-                        a.ui.top.left.attached.basic.button(href="/events")
-                            i.arrow.left.icon
-                            |Events
-                    .twelve.wide.center.aligned.column
-                        h1.ui.header View Event
-                .row
-                    .ten.wide.column
-                        .ui.header #{title}
-                        strong #{formatted_start_date} - #{formatted_start_date}
-                        img.ui.centered.image(src="{{c.url image_id height=500 width=800 background='white' crop='lpad'}}")
-                        if image_url
-                            img.ui.centered.image(src=image_url)
-                        each tags
-                            .ui.basic.label #{this}
-                        +volunteer_list
-                        +join_button
-                    .five.wide.column
-                        +edit_button
-            else
-                .centered.row
-                    h1.ui.center.aligned.header Edit Event
-                .row
-                    .twelve.wide.column
-                        .ui.form
-                            +title
-                            +start_datetime
-                            div
-                                +end_datetime
-                            +tags
-                            +image_id
-                            +image_url
-                            +content
-                    .four.wide.column
-                        +edit_button
-                        #delete_event.ui.red.icon.button
-                            i.trash.icon
+        .centered.row
+            .three.wide.column
+                a.ui.button(href="/events")
+                    i.arrow.left.icon
+                    | Events
+            .ten.wide.center.aligned.column
+                h1.ui.header View Event
+            .three.wide.column
+                +edit_button
+        .row
+            .ten.wide.column
+                .ui.header #{title}
+                strong #{formatted_start_date} - #{formatted_start_date}
+                img.ui.centered.image(src="{{c.url image_id height=500 width=800 background='white' crop='lpad'}}")
+                if image_url
+                    img.ui.centered.image(src=image_url)
+                each tags
+                    .ui.basic.label #{this}
+            .five.wide.column
+                +volunteer_list
+                +join_button
+
+
+
+template(name='event_edit')
+    .ui.stackable.padded.grid
+        .centered.row
+            h1.ui.center.aligned.header Edit Event
+        .row
+            .twelve.wide.column
+                .ui.form
+                    +title
+                    +start_datetime
+                    div
+                        +end_datetime
+                    +tags
+                    +image_id
+                    +image_url
+                    +content
+            .four.wide.column
+                +edit_button
+                #delete_event.ui.red.icon.button
+                    i.trash.icon
