--- a/client/facets/facets.jade
+++ b/client/facets/facets.jade
@@ -5,13 +5,13 @@ template(name='tag_facet')
     //     i.search.icon
     //     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" placeholder='Search...'
     if selected_tags
-        #clear_tags.ui.blue.icon.circular.button
+        #clear_tags.ui.blue.icon.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.blue.circular.button
+            .unselect_tag.ui.blue.button
                 strong #{this}
     each _tags
-        .ui.basic.circular.button.select_tag(class=_tag_class) 
+        .ui.basic.button.select_tag(class=_tag_class) 
             strong #{this.name}
 
 
@@ -20,13 +20,13 @@ template(name='timestamp_facet')
         +icon48 name='calendar' classes='ui mini inline image' tooltip='Date Tags'
         |Date Tags
     if selected_timestamp_tags
-        #clear_timestamp_tags.ui.blue.icon.circular.button
+        #clear_timestamp_tags.ui.blue.icon.button
             i.remove.icon
         each selected_timestamp_tags
-            .unselect_timestamp_tag.ui.blue.circular.button
+            .unselect_timestamp_tag.ui.blue.button
                 strong #{this}
     each timestamp_tags
-        .ui.basic.circular.button.select_timestamp_tag(class=timestamp_tag_class) 
+        .ui.basic.button.select_timestamp_tag(class=timestamp_tag_class) 
             | #{this.name}
             // if isInRole 'admin'
             //     small #{this.count}
@@ -37,13 +37,13 @@ template(name='username_facet')
         +icon48 name='couple' classes='ui mini inline image' tooltip='Filter Authors'
         |Filter Authors
     if selected_author_ids
-        #clear_authors.ui.blue.icon.circular.button
+        #clear_authors.ui.blue.icon.button
             i.remove.icon
         each selected_author_ids
-            .unselect_author.ui.blue.circular.button
+            .unselect_author.ui.blue.button
                 strong #{this}
     each author_tags
-        .ui.basic.circular.button.select_author(class=cloud_tag_class) 
+        .ui.basic.button.select_author(class=cloud_tag_class) 
             img.ui.avatar.image(src="{{c.url profile.image_id width=100 height=100 gravity='face' crop='fill'}}")
             | #{username}
             // if isInRole 'admin'
@@ -55,12 +55,12 @@ template(name='participant_facet')
         +icon48 name='couple'
         |Browse Participants
     if selected_participant_ids
-        #clear_participants.ui.blue.icon.circular.button
+        #clear_participants.ui.blue.icon.button
             i.remove.icon
         each selected_participant_ids
-            .unselect_participant.ui.blue.circular.button
+            .unselect_participant.ui.blue.button
                 strong #{this}
     each participant_tags
-        .ui.basic.circular.button.select_participant(class=cloud_tag_class) 
+        .ui.basic.button.select_participant(class=cloud_tag_class) 
             | #{this.username}
             small #{this.count}
